# dbt_toucan_dev

./: README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
macros/currency/: convert_currency.sql
macros/date/: analytics_convert_date.sql  date_after_current_period.sql  date_in_current_period.sql  date_in_l12m.sql  date_in_last_period.sql  date_in_last_x_month.sql  date_in_next_period.sql  date_in_ytd.sql  date_is_last_day_of_period.sql  date_is_last_period_day.sql  format_date.sql
macros/legacy/: date_in_last_year.sql  date_next_quarter.sql
macros/salesforce/: set_use_case_category.sql
macros/salesloft_tmp/: salesloft_assign_group.sql
macros/url/: extract_domain.sql
macros/utils/: add_dbt_last_run_ts.sql  add_instance_freshness_flags.sql  classify_jira_status.sql  norm_text.sql
models/: dim_date_bis.sql  dim_instances.sql  dim_instances_account.sql  dim_instances_monthly.sql  fact_mrr.sql
models/internal_analytics/: client_retention.sql  customer_analytics_retention.sql  customer_analytics_retention_daily.sql  customer_analytics_retention_daily_bis.sql  customer_analytics_retention_monthly.sql  customer_analytics_retention_monthly_bis.sql  customer_analytics_retention_weekly.sql  customer_analytics_retention_weekly_bis.sql  user_activity_segments.sql  user_activity_segments_interaction_daily.sql  user_activity_segments_interaction_monthly.sql  user_activity_segments_interaction_periods.sql  user_activity_segments_interaction_weekly.sql  user_activity_segments_monthly.sql  user_activity_segments_periods.sql  user_retention.sql  (+2 more)
(+6 files in other folders)
