[tool.poetry]
name = "data-finance-dbt"
version = "0.1.0"
description = ""
authors = ["yannibenoit <yanni.iyeze@toucantoco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-bigquery = "1.7.0"
dbt-core = "1.7.0"
dbt-extractor = "0.4.1"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.21.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
